fix h1 width on mobile

--- a/guessgame.css
+++ b/guessgame.css
@@ -30,6 +30,7 @@ body {
 
 h1 {
   width: 450px;
+  max-width: 90vw;
   text-align: center;
   font-size: 36px;
 }
